feat(auth): spc interaction continue route
